style.css
:root {
    --heading-color: #25848a;
    --button-color: #43e1cb;
    --text-color: rgb(107, 104, 104);
    --black-color: #1e1d1d;
    --background: #cafef5;
    --subheading-color: #666d6c;
}

html {
    font-family: "Open Sans";
    overflow-x: hidden;
}

#navbar a {
    font-family: "Open Sans";
    font-weight: lighter;
    font-size: 1rem;
    letter-spacing: 0.125rem;
}

.welcome-container {
    padding: 2em;
}

.welcome {
    background-color: var(--background);
    text-align: center;
    padding: 5%;
}

.welcome-text1, .heading-text {
    font-family: "Open Sans";
    font-weight: lighter;
    font-size: 1.125rem;
    letter-spacing: 0.125rem;
    color: var(--heading-color);
}

.welcome-text2 {
    font-family: "Special Elite";
    padding: 0;
    color: var(--black-color);
    text-wrap: balance;
}

.welcome-text3 {
    margin-top: 1rem;
    margin-bottom: 3rem;
}

.welcome-text3, .regular-text {
    font-size: 1.125rem;
    color: var(--text-color);
}

.regular-text {
    margin-bottom: 1.5rem;
}

.info-container {
    background-color: var(--background);
    text-align: center;
    padding-top: 2.25rem;
    padding-bottom: 2.25rem;
    text-wrap: balance;
}

.paragraph-text {
    color: var(--black-color);
    font-size: 1.125rem;
    padding-right: 1rem;
    text-wrap: balance;
}

.subheading-text {
    color: var(--subheading-color);
    font-size: 1.125rem;
    font-weight: bold;
    text-wrap: balance;
}

.socials {
    width: 2rem;
    height: 2rem;
}

.support-us {
    position: relative;
    background-image: linear-gradient(rgba(0, 0, 0, 0.24) 0%, rgba(0, 0, 0, 0.24) 100%), url("img/support.png");
    background-size: cover;
    background-position: center;
    height: 18.75rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.overlay-text {
    font-size: 1.5rem;
    color: white;
    text-wrap: balance;
    text-shadow: 
            -1px -1px 0 var(--black-color),
            1px -1px 0 var(--black-color),
            1px 1px 0 var(--black-color),
            -1px 1px 0 var(--black-color);
}

.overlay-title {
    font-family: "Special Elite";
    font-size: 2rem;
    color: white;
}

.donate {
    width: auto;
    height: 2rem;
}

footer {
    font-size: 0.75rem;
}

.footer1 {
    color: var(--black-color);
    font-weight: bold;
}

.mail-to a {
    color: var(--heading-color);
    text-decoration: none;
}

.copyright {
    color: var(--subheading-color);
}

@media only screen and (max-width: 576px) {
    .welcome-text2 {
        font-size: 1.875rem;
    }

    .donate {
        height: 1rem;
    }

    .amazon {
        height: 0.6rem;
    }

    .venmo {
        height: 0.4rem;
    }

    .overlay-text {
        font-size: 1rem;
    }
    
    .overlay-title {
        font-size: 1.5rem;
    }
}

@media only screen and (min-width: 576px) {
    .welcome-text2 {
        font-size: 2.25rem;
    }
}

@media only screen and (min-width: 768px) {
    .welcome-text2 {
        font-size: 1.5rem;
    }
}

@media only screen and (min-width: 992px) {
    .welcome-text2 {
        font-size: 2.25rem;
    }
}

@media only screen and (min-width: 1200px) {
    .welcome-text2 {
        font-size: 3rem;
    }
}

@media only screen and (min-width: 1400px) {
    .welcome-text2 {
        font-size: 3.125rem;
    }
}

